# cmake-tutorial-sample

./: .gitignore  LICENSE  README.md
01-helloworld/: CMakeLists.txt
02-build_debug/: build.sh
03-find_files/: CMakeLists.txt  build.sh
04-find_package/: CMakeLists.txt  build.sh  main.cpp
05-macro_function/: CMakeLists.txt  build.sh
06-multiplexing/: CMakeLists.txt  CMakeLists_Apple.cmake  CMakeLists_iOS.cmake  MultiplexingFunc.cmake  build.sh
07-workspace/: CMakeLists.txt  build.sh
07-workspace/hello/: CMakeLists.txt  hello.cpp  hello.h
07-workspace/main/: CMakeLists.txt  main.cpp
07-workspace/world/: CMakeLists.txt  world.cpp  world.h
08-cross_platform/: build.sh
08-cross_platform/application/android/: settings.gradle
08-cross_platform/application/android/app/: build.gradle
08-cross_platform/application/android/app/src/androidTest/java/com/sdk/render/: ExampleInstrumentedTest.kt
08-cross_platform/application/android/app/src/main/: AndroidManifest.xml
08-cross_platform/application/android/app/src/main/java/com/sdk/render/: MainActivity.kt
08-cross_platform/application/android/app/src/main/res/layout/: activity_main.xml
08-cross_platform/application/android/app/src/test/java/com/sdk/render/: ExampleUnitTest.kt
08-cross_platform/application/android/gradle/wrapper/: gradle-wrapper.properties
08-cross_platform/application/electron/: build.sh  index.html  main.js  package-lock.json  package.json  renderer.js
08-cross_platform/application/ios/Render/: AppDelegate.swift  ContentView.swift  Render-Bridging-Header.h  SceneDelegate.swift
08-cross_platform/application/ios/Render.xcodeproj/: project.pbxproj
08-cross_platform/application/ios/Render.xcworkspace/: contents.xcworkspacedata
08-cross_platform/application/web/: build.sh  index.html
08-cross_platform/cmake/: CMakeLists.txt
08-cross_platform/cmake/aar/: CMakeLists.txt
08-cross_platform/cmake/aar/src/: sdk_jni.cpp  sdk_jni.h
08-cross_platform/cmake/algorithm/: CMakeLists.txt
08-cross_platform/cmake/algorithm/include/: algorithm.h
08-cross_platform/cmake/algorithm/src/: algorithm.cpp
08-cross_platform/cmake/framework/: CMakeLists.txt
08-cross_platform/cmake/framework/src/: SDKObjectiveC.h  SDKObjectiveC.mm
08-cross_platform/cmake/wasm/: CMakeLists.txt
08-cross_platform/cmake/wasm/src/: sdk_web_assembly.cpp  sdk_web_assembly.h
08-cross_platform/wrapper/JNI/: settings.gradle
08-cross_platform/wrapper/JNI/app/: build.gradle
08-cross_platform/wrapper/JNI/app/src/androidTest/java/com/sdk/jni/: ExampleInstrumentedTest.kt
08-cross_platform/wrapper/JNI/app/src/main/: AndroidManifest.xml
08-cross_platform/wrapper/JNI/app/src/main/java/com/sdk/jni/: MainActivity.kt
08-cross_platform/wrapper/JNI/app/src/main/res/layout/: activity_main.xml
08-cross_platform/wrapper/JNI/app/src/test/java/com/sdk/jni/: ExampleUnitTest.kt
08-cross_platform/wrapper/JNI/gradle/wrapper/: gradle-wrapper.properties
08-cross_platform/wrapper/JNI/sdk/: build.gradle
08-cross_platform/wrapper/JNI/sdk/src/androidTest/java/com/sdk/sdk/: ExampleInstrumentedTest.kt
08-cross_platform/wrapper/JNI/sdk/src/main/: AndroidManifest.xml
08-cross_platform/wrapper/JNI/sdk/src/main/java/com/sdk/sdk/: IAlgorithmInterface.kt  SDKKotlin.kt
08-cross_platform/wrapper/JNI/sdk/src/test/java/com/sdk/sdk/: ExampleUnitTest.kt
document/: CMake00编译的基本概念.md  CMake01构建HelloWorld.md  CMake02编译配置DebugRelease.md  CMake03添加文件和产物.md  CMake04添加第三方库.md  CMake05函数和宏的对比.md  CMake06加载文件进行复用.md  CMake07多工程协作.md  CMake08跨平台编译Android细节.md  CMake08跨平台编译WebAssembly细节.md  CMake08跨平台编译iOS细节.md  CMake08跨平台编译最佳实践.md  CMake09如何读懂复杂文档.md  CMake10不同IDE的差别和选择.md
